--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -16,3 +16,12 @@ h1 {
 a {
   text-decoration: none;
 }
+input.choose_input {
+  z-index: 9;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+}
