--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -17,3 +17,14 @@ h1{
 a{
     text-decoration: none;
 }
+
+input.choose_input{
+        z-index: 9;
+        position: absolute;
+        left: 0;
+        top: 0;
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+      
+}
